# triangles

./: Cargo.toml
.github/workflows/: rust.yml
benches/: benchmarks.rs  figures2d.rs  pt_inside_triangle.rs  topology.rs
src/: generic_triangle.rs  lib.rs  main.rs  primitives.rs
src/geometry2d/: line.rs  mod.rs  point.rs  polygon.rs  test.rs  triangle.rs  vector.rs
src/geometry2d/point/: bounding_box.rs  mod.rs  static_point.rs
src/geometry2d/polygon/: cut.rs  mod.rs
src/geometry2d/triangle/: cut.rs  found_triangle.rs  mod.rs  static_triangle.rs
src/geometry3d/: mod.rs  triangles.rs
src/geometry3d/line/: mod.rs  referenced_line.rs  static_line.rs
src/geometry3d/plane/: mod.rs  projection.rs
src/geometry3d/point/: bounding_box.rs  mod.rs
src/geometry3d/triangle/: mod.rs
src/geometry3d/triangles/: indexed_point.rs  mod.rs  topology.rs
src/geometry3d/triangles/topology/: mod.rs  test.rs  triangle_group.rs
src/test/: mod.rs
