[package]
name = "triangles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
triangulate = "0.2.0"
ordered-float = "3.7.0"
num-traits = "0.2.15"
log = "0.4.18"
thiserror = "1.0.40"
itertools = "0.11.0"
vek = "0.16.1"
stl_io = "0.7.0"

[dev-dependencies]
svg = "0.13.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
approx = "0.5.1"

[[bench]]
name = "pt_inside_triangle"
harness = false